# jobfinder

./: README.md  alembic.ini  config.py  db.py  main.py  pyproject.toml
alembic/versions/: 834fb3991454_permission_v1.py
auth/: jwt.py  models.py
data_types/: models.py  schema.py
frontend/: app.js  index.html  login.html  posts.html  style.css
migrations/: env.py
migrations/versions/: 14f597a54f77_antras_zingsnis_v4.py  1942e5df5bd5_added_permissions_list_to_user_v1.py  2839cee59f81_antras_zingsnis_v3.py  342991fa9793_completed_models_relation_v1.py  38bffe38d34c_antras_zingsnis_v6.py  4b5e257a6e29_first_steps_v5.py  51728b2370bb_antras_zingsnis_v7.py  5503827472fc_fixing_post_model_v2.py  671eb8762aeb_antras_zingsnis_v5.py  7e0b0a9219ec_first_steps_v99.py  9760021c3a22_antras_zingsnis_v1.py  b9748a33d910_antras_zingsnis_v18.py  caf1b70c6e12_fixing_post_model_v3.py  d7364f69035e_antras_zingsnis_v2.py  e216f34f0625_antras_zingsnis_v9.py  e6040a7e0809_pirmas_zingsnis_v1.py  e734c4ba7a43_antras_zingsnis_v11.py  ececf7ac8ef0_first_steps_v2.py  fca0a546375d_pirmas_zingsnis.py
post/: models.py  router.py
routers/: posts_router.py  users_router.py  website_router.py
templates/: index.html
templates/auth/: login.html
user/: models.py  router.py
utils/: config.py  db.py  jwt.py  permission_cheker.py
